force-app/main/default/objects/Payment__c/fields/AR_Note__c.field-meta.xml
<CustomField>
    <fullName>AR_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR Note</label>
    <referenceTo>Credit_Note__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>