force-app/main/default/objects/Payment__c/fields/Full_PaymentId__c.field-meta.xml
<CustomField>
    <fullName>Full_PaymentId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full_PaymentId</label>
    <type>Text</type>
</CustomField>