force-app/main/default/objects/Payment__c/fields/Intacct_AR_ID__c.field-meta.xml
<CustomField>
    <fullName>Intacct_AR_ID__c</fullName>
    <formula>AR_Note__r.Intacct_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intacct AR Note ID</label>
    <type>Text</type>
</CustomField>