force-app/main/default/objects/Payment__c/fields/Is_OSG_Source__c.field-meta.xml
<CustomField>
    <fullName>Is_OSG_Source__c</fullName>
    <formula>IF(
 OR(
  AND(
   From_LMS__c = true,
   OSG_Account__c = true
  ),
  From_LMS__c = false
 ),
true,
false
)</formula>
    <label>Is OSG Source</label>
    <type>Checkbox</type>
</CustomField>