force-app/main/default/objects/Payment__c/fields/OSG_Account__c.field-meta.xml
<CustomField>
    <fullName>OSG_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If an LMS payment, determines if the account is an OSG account or not. (For Intacct)</inlineHelpText>
    <label>OSG Account</label>
    <type>Checkbox</type>
</CustomField>