force-app/main/default/objects/Payment__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <length>64</length>
    <type>Text</type>
</CustomField>