force-app/main/default/objects/Payment__c/fields/SafeGuard__c.field-meta.xml
<CustomField>
    <fullName>SafeGuard__c</fullName>
    <formula>if(OR(
 NOT(ISBLANK(Intacct_AR_ID__c)),
 NOT(ISBLANK(Intacct_GL_No__c))
), 
&quot;Can&apos;t delete this payment!&quot;,
&apos;&apos;)</formula>
    <label>SafeGuard</label>
    <type>Text</type>
</CustomField>