force-app/main/default/objects/Payment__c/validationRules/Invalid_CreditCard_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_CreditCard_Reference</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Payment_Method__c, &apos;Credit Card&apos;),
  NOT(BEGINS(Reference__c, &apos;ch_&apos;))
)</errorConditionFormula>
    <errorMessage>Credit card payment requires a valid stripe charge reference!</errorMessage>
</ValidationRule>