force-app/main/default/objects/Payment__c/listViews/Improper_Sync_OSG.listView-meta.xml
<ListView>
    <fullName>Improper_Sync_OSG</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Account__c</columns>
    <columns>AR_Note__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Reference__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>From_LMS__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Intacct_GL_No__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Intacct_GL_No__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Intacct_AR_ID__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Improper Sync (OSG)</label>
</ListView>